--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
   bottom: 20px;
   right: 20px;
   z-index: 1000;
-  background-color: var(--container-background-color); /* Background based on the theme */
+  background-color: var(--button-background-color); /* Background based on the theme */
   border-radius: 50px;
   padding: 10px 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -19,6 +19,7 @@ mat-icon {
   margin-right: 10px; /* Space between the icon and the slider */
   font-size: 24px;
   cursor: pointer;
+  color: #ffffff;
   animation: rotateIcon 5s linear infinite; /* Rotating animation */
 }
 
