--- a/src/app/health-screening/vaccination/vaccination.component.html
+++ b/src/app/health-screening/vaccination/vaccination.component.html
@@ -67,7 +67,7 @@
         </mat-radio-group>
       </div>
 
-      <!-- Multiple Check Questions -->
+      <!-- Check Questions -->
       <mat-card-title>{{ translations.CHECK_ALL }}</mat-card-title>
       <div formArrayName="checkAllThatApply">
         <div *ngFor="let option of checkOptions; let i = index">
@@ -77,12 +77,11 @@
 
       <!-- Actions -->
       <div class="actions">
-        <button mat-raised-button color="primary" type="submit" [disabled]="vaccinationForm.valid">{{ translations.SUBMIT }}</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="!vaccinationForm.valid">{{ translations.SUBMIT }}</button>
         <button mat-stroked-button color="warn" type="button" (click)="onClear()">{{ translations.CLEAR }}</button>
       </div>
     </form>
   </mat-card-content>
-</mat-card>
 
   <!-- Displaying Recommendations based on the input -->
   <mat-card-content *ngIf="displayRecommendation && recommendations.length > 0" class="recommendations">
@@ -92,6 +91,6 @@
     </ul>
     <mat-error *ngIf="vaccinationForm.invalid && isSubmitting">
       {{ translations.FORM_INCOMPLETE }}
-  </mat-error>  
-</mat-card-content>
-
+    </mat-error>
+  </mat-card-content>
+</mat-card>
