Implemented some features related to Dark Mode

--- a/src/app/health-screening/breast-cancer/breast-cancer.component.scss
+++ b/src/app/health-screening/breast-cancer/breast-cancer.component.scss
@@ -22,7 +22,7 @@ body.dark-theme {
 
 .breast-cancer-card {
   background-color: var(--container-background-color);
-  color: var(--text-color);
+  color: var(--body-color);
   max-width: 600px;
   margin: 15px auto;
   padding: 20px;
