--- a/src/app/health-screening/cervical-cancer/cervical-cancer.component.scss
+++ b/src/app/health-screening/cervical-cancer/cervical-cancer.component.scss
@@ -29,7 +29,7 @@ body.dark-theme {
 /* Main card styling */
 .cervical-cancer-card {
   background-color: var(--container-background-color);
-  color: var(--text-color);
+  color: var(--body-color);
   max-width: 600px;
   margin: 15px auto;
   padding: 20px;
