--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,4 @@
+<h5 class="profile-text"> Profile </h5>
 <!-- Main Content Section -->
 <div class="profile-container">
   <!-- Cover Photo Section -->
