--- a/src/app/health-screening/care-for-older-adults/care-for-older-adults.component.scss
+++ b/src/app/health-screening/care-for-older-adults/care-for-older-adults.component.scss
@@ -23,7 +23,7 @@ body.dark-theme {
 /* Main card styling */
 .care-for-older-adults-card {
   background-color: var(--container-background-color);
-  color: var(--text-color);
+  color: var(--body-color);
   max-width: 600px;
   margin: 15px auto;
   padding: 20px;
