--- a/src/app/health-screening/chlamydia/chlamydia.component.scss
+++ b/src/app/health-screening/chlamydia/chlamydia.component.scss
@@ -27,7 +27,7 @@ body.dark-theme {
 /* Main card styling */
 .chlamydia-card {
   background-color: var(--container-background-color);
-  color: var(--text-color);
+  color: var(--body-color);
   max-width: 600px;
   margin: 15px auto;
   padding: 20px;
