--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -39,7 +39,7 @@ body.dark-theme {
 
 /* Aligning the title with the boxes */
 .home-title {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 500;
   text-align: center;
   margin-top: -20px;
@@ -104,7 +104,7 @@ body.dark-theme {
 .screening-text {
   color: var(--blackColor);
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
   text-align: center;
   font-family: var(--fontFamily);
 }
@@ -113,6 +113,7 @@ body.dark-theme {
 .wellness {
   text-align: center;
   margin: 20px;
+  color: var(--text-color);
   height: 290px;
   font-family: var(--fontFamily);
   background-color: var(--container-background-color);
@@ -144,4 +145,5 @@ body.dark-theme {
 
 ::ng-deep .mat-mdc-card {
   margin-top: 20px;
+  background-color: var(--background-color) !important;
 }
