--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,6 +1,6 @@
 .profile-container {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: -20px auto;
   padding: 20px;
   background-color: var(--container-background-color);
 }
@@ -268,4 +268,11 @@
       }
     }
   }
+}
+
+.profile-text {
+  margin-top: 15px;
+  font-size: 17px;
+  font-family: var(--fontFamily);
+  color: #6c757d;
 }
