--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,5 +90,5 @@ body.dark-theme {
   --box-background-color: #2e3b4c
 }
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: var(--main-background-color);
+body { margin: 0; font-family: "Outfit" sans-serif; background-color: var(--main-background-color);
   color: #919aa3;}
